--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,6 +26,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire</artifactId>
+            <version>3.0.0-M7</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
